nas/51-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nas-proxy
  namespace: nas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nas-proxy
  template:
    metadata:
      labels:
        app: nas-proxy
        ambient.istio.io/bypass: "true"
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: config
          configMap:
            name: nas-proxy-config
