nas/10-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nas
  namespace: nas
spec:
  selector:
    app: nas-proxy
  ports:
    - name: http-nas
      port: 5001
      targetPort: 80
