nas/11-service-entry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: nas-external
  namespace: nas
spec:
  hosts:
    - nas.nas.svc.cluster.local
  addresses:
    - 192.168.68.67
  ports:
    - number: 5001
      name: https
      protocol: HTTPS
  location: MESH_EXTERNAL
  resolution: STATIC
  endpoints:
    - address: 192.168.68.67
