nas/60-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nas
  namespace: nas
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: nas.czcx.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nas
                port:
                  number: 5001
