nas/65-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nas
  namespace: nas
spec:
  parentRefs:
    - name: internal-gateway
      namespace: istio-system
  hostnames:
    - "nas.internal.czcx.cc"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nas
          port: 5001
